# clip_cloudshare

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
include/: clip.hpp  task.hpp  tasklist.hpp  todo.hpp
src/: clip.cpp  main.cpp  task.cpp  tasklist.cpp  todo.cpp
